modified:   index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" href="/EficientEdu/logo192.png" />
     <link rel="manifest" href="/EficientEdu/manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <script src="../EE/src/main.jsx"></script>
     <title>EficientEdu!</title>
     <link
       href="/EficientEdu/static/css/main.48f8903e.chunk.css"
@@ -23,7 +23,8 @@
     />
   </head>
   <body classname="font-mono">
-    <div id="root"></div>
+    <div id="root"
+     ></div>
   
   </body>
 </html>
