--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
     <link rel="apple-touch-icon" href="/EficientEdu/logo192.png" />
     <link rel="manifest" href="/EficientEdu/manifest.json" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../EE/src/main.jsx"></script>
+    
     <title>EficientEdu!</title>
     <link
       href="/EficientEdu/static/css/main.48f8903e.chunk.css"
       rel="stylesheet"
     />
   </head>
-  <body classname="font-mono">
-    <div id="root"
-     ></div>
-  
+  <body>
+    <div id="root"></div>
+    <script src="../EE/src/main.jsx"></script>
   </body>
 </html>
